<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wbg"
    android:padding="40dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/psw1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp"
        android:text="@string/forgotPassword"
        android:textColor="#7A8045"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/psw1" />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/color"
        android:padding="10dp"
        android:text="@string/btn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/psw1" />

    <TextView
        android:id="@+id/psw2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changePsw"
        android:textColor="#CDA019"
        app:layout_constraintEnd_toEndOf="@id/btn"
        app:layout_constraintTop_toBottomOf="@id/btn" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="#C9474444"
        android:hint="@string/inputEmail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@id/psw3" />

    <EditText
        android:id="@+id/psw3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C9474444"
        android:hint="@string/inputPsw"
        android:inputType="textPassword"
        android:layout_marginBottom="15dp"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@id/btn" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text1"
        android:textColor="#C3B5B5"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text2"
        android:textColor="#C3B5B5"
        app:layout_constraintTop_toBottomOf="@id/text2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/mainText"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>